# sol-sensors

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  format.sh  main.cpp
examples/: CMakeLists.txt  main.cpp  main2.cpp  main3.cpp
gui/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
gui/include/gui/: MainWindow.hpp  Settings.hpp  axistag.h  gui.hpp  mainwindow.h  qcustomplot.h  settings.h
gui/src/gui/: AxisTag.cpp  MainWindow.cpp  Settings.cpp  axistag.cpp  gui.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  qcustomplot.cpp  settings.cpp  settings.ui
include/sensors/: Device.hpp  sensors.hpp
nogui/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
nogui/include/nogui/: nogui.hpp  options.hpp
nogui/src/nogui/: nogui.cpp
sensors/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
sensors/include/sensors/: Device.hpp  error.hpp  sensors.hpp
sensors/src/sensors/: linux_sensors.cpp  mac_sensors.cpp  win_sensors.cpp
shared/: CMakeLists.txt
shared/include/shared/config/: config.hpp
shared/include/shared/csv/: csv.hpp
shared/include/shared/stats/: stats.hpp
shared/src/shared/config/: config.cpp
shared/src/shared/csv/: csv.cpp
src/sensors/: linux_sensors.cpp  unix_sensors.cpp  win_sensors.cpp
tests/: CMakeLists.txt  config.hpp  csv.hpp  nogui.hpp  sensors.hpp  stats.hpp  tests.cpp
